<resources>
    <string name="app_name">AghslilniDe</string>
    <string name="retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="en">En</string>
    <string name="walk_title_1">New laundry?</string>
    <string name="walk_msg1">Register now with the laundry information, choose all your provided departments, and start</string>
    <string name="walk_title_2">Your requests are in your hands?</string>
    <string name="walk_msg2">Receive all requests for your laundry and follow them up to date</string>
    <string name="gps">To Continue , Let your device turn on loaction using Google\'s Loactiaon Service</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="undefined">undefined</string>

    <string name="login"> Login </string>
    <string name="signup_now">registration</string>
    <string name="new_user">New driver</string>
    <string name="signup">Register  </string>
    <string name="password">password</string>
    <string name="forget_password">Forgot your password</string>
    <string name="login_now">Login now</string>
    <string name="pass_confirm">confirm password</string>
    <string name="bysigningin_you_agree_to">By registering you agree to </string>
    <string name="resend">Resend</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm the new password</string>
    <string name="email">E-mail</string>
    <string name="send_message">Write your message here</string>
    <string name="new_orde">New order</string>
    <string name="order_status">Order status</string>
    <string name="delivery_informaion">Delivery information</string>
    <string name="pickup_informaion">Receiving information</string>
    <string name="dropof_informaion">Delivery information</string>
    <string name="laundry_name">Laundry name</string>
    <string name="phone_number">Mobile number</string>
    <string name="next">next</string>
    <string name="change_pass">change password</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="empty_name_msg">Please Enter your name</string>

    <string name="msg_empty_file_car_lisence">Please Upload your Car Lisence</string>
    <string name="msg_empty_file_driver_lis">Please Upload your Driver lisence</string>
    <string name="msg_empty_file_id">Please upload your Id</string>
    <string name="msg_empty_file_profile_img">Please upload  your Profile Picture</string>
    <string name="msg_empty_phone_number">Please enter your Phone Number </string>
    <string name="msg_empty_password">Please enter your password</string>
    <string name="empty_confirm_password">Please confirm your password</string>
    <string name="both_passwords_must_match">Passwords don\'t match</string>
    <string name="empty_msg_cc">Please Enter Country Code</string>
    <string name="msg_empty_lat">Please Specify your Location</string>
    <string name="msg_empty_address">Please Enter your address</string>
    <string name="done">Done</string>
    <string name="not_all_permissions_accepted">not_all_permissions_accepted</string>

    <string name="msg_empty_new_password">Please enter your password</string>
    <string name="msg_empty_otp">Please enter your OTP</string>
    <string name="name">name</string>
    <string name="driving_lisence">driving license</string>
    <string name="car_lisence">Car form</string>
    <string name="id_img">upload your identity</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="otp">OTP Code</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="new_">New</string>
    <string name="current">Current</string>
    <string name="finshed">Finished</string>
    <string name="no_orders">No Orders</string>
    <string name="no_orders_new">No New Orders</string>
    <string name="no_orders_before"> No Finished Orders </string>
    <string name="no_orders_current"> No Current Orders "</string>
    <string name="urgent">Urgent</string>
    <string name="new_order">New Order</string>
    <string name="driver_on_way">driver on way</string>
    <string name="deliverd">sent delivered handed</string>
    <string name="deliver">Deliver</string>
    <string name="change_password">Change Password</string>
    <string name="delete_acc">Delete Account</string>
    <string name="delivery_addres">Delivery addresses</string>
    <string name="are_yoy_sure_to_delete_acc">Are you sure to delete the account?</string>
    <string name="yes_delte">Yes Delete</string>
    <string name="no_thankes">No Thanks</string>
    <string name="signin_first">Register first with the application</string>
    <string name="sign_in_">You can order the washing products you need, but only after logging in first</string>


    <string name="you_can_change_pass_now">You can change your password</string>
    <string name="you_can_delete_your_acc_now">You can delete your account</string>
    <string name="save">save</string>
    <string name="you_can_add_or_Delete_Address">You can delete and add a new address</string>
    <string name="wallet">Wallet</string>
    <string name="setting">Settings</string>
    <string name="about_us">About Us</string>
    <string name="notifaction">Notifications</string>
    <string name="contact_us">"Contact Us "</string>
    <string name="it">Technical Support</string>
    <string name="logout">Logout</string>
    <string name="laundry_rates">Customer reviews</string>
    <string name="total">Total</string>
    <string name="commetion">Commission</string>
    <string name="profits">Profits</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_money">Withdraw</string>
    <string name="amount">Amount</string>
    <string name="bank_name">Bank Name</string>
    <string name="no_items">No Items</string>
    <string name="no_items_to_add">There are no products in this service</string>
    <string name="no_products">There are no products</string>
    <string name="no_items_to_Add_to_basket">There are no products to add to the cart or request the service</string>
    <string name="no_otifications">There are no notifications</string>
    <string name="no_notifaction_for_you">There are no notifications for you yet</string>
    <string name="acc_number">Account Number</string>
    <string name="abou_app">About App</string>
    <string name="_18_18">كي تصبح عضواً في تطبيق ، يجب عليك أولا أن تقوم بتعبئة استمارة التسجيل، ثم الموافقة والتعهد على الالتزام بأحكام الاستخدام، وعند اعتماد التسجيل و طلب وجبة باستخدام التطبيق؛ فإنك توافق على الشروط و الاحكام الخاصة بنا \n\nيحتفظ التطبيق بحق تعديل شروط الاستخدام الماثلة في أي وقت وبدون اشعار مسبق، وأنك توافق على أن كل زيارة تقوم بها للتطبيق سوف تخضع إلى شروط الاستخدام المفعلة في هذا الوقت، وأن إستخدامك للتطبيق في أي وقت يؤكد على أنك قمت بالقراءة و الموافقة على هذه الاحكام و الشروط\n\nإن الخدمات عبر الإنترنت غير مقصود منها أن تستعمل بواسطة شخص يقل عمره عن 18 سنة.   وفي حالة كان عمركم 18 سنة على الأقل،، حينئذ، يتعين عليكم الاطلاع على هذه الشروط بمساعدة أحد والديكم ويتعين عليهم فهم والموافقة على تلك الشروط حتى يتسنى لكم استخدام تلك الخدمات\n\nعلى المستخدم أن يطلب، من خلال تطبيقنا، الأطعمة  من أحد الاسر المنتجة من قائمة الطعام الخاصة بهم\nعلى المستخدم أن يضمن أثناء تقديم الطلب ان التفاصيل المزودة من قبله، كرقم الهاتف وعنوان التسليم وما إلى ذلك ،صحيحة.\n\nستتلقى إشعارًا بوضع الطلب من التطبيق يؤكد استلام طلبك.و في حالة عدم توفر طلبك، سيتم إخطارك أيضًا.\nقد نتصل بك لتأكيد التفاصيل والسعر و وقت التسليم المقدر.\n\nهذه الشروط والأحكام تطبق على تطبيق اطبخلى على أجهزة الآيفون، الآيباد، الأندرويد\n</string>
    <string name="balance">Balance</string>
    <string name="client_name">Client Name</string>
    <string name="sub_total">Total price of pieces</string>
    <string name="delivery_fees">Delivery price</string>
    <string name="tax_Service">Tax</string>
    <string name="service_you_want">Services provided by your laundry</string>
    <string name="edit">Edit</string>
    <string name="choosen_items">Chosen Items </string>
    <string name="payment_option">payment method</string>
    <string name="agree">Agree</string>
    <string name="decline">Decline</string>
    <string name="edit_bill">Edit invoice</string>
    <string name="dropoff">Received</string>
    <string name="sr">S.R</string>
    <string name="compeleted">Compeleted</string>
    <string name="items">Items</string>
    <string name="welcome">Welcome !</string>
    <string name="please_attach_the_car_papers_and_license">Please attach the car papers and license</string>

    <string name="msg_empty_amount">Please enter the amount</string>
    <string name="msg_empty_bank_name">Please enter the bank name</string>
    <string name="empty_account_number">Please enter the account number</string>
    <string name="dear">Dear ...</string>
    <string name="request_has_been_sent">Your account will be activated after reviewing the data by the application</string>
    <string name="additional_cost">Additional Cost</string>
    <string name="profiile_img">Profile image</string>
    <string name="wrongotp">Wrong OTP</string>
    <string name="connection_error">Connection Error</string>
</resources>