<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp">


        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:gravity="center"
            android:text="@string/delete_acc"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
             android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toTopOf="@id/txt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/light_grey" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:text="@string/are_yoy_sure_to_delete_acc"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt2" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/black"
            android:text="@string/yes_delte"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textAllCaps="false"           app:cornerRadius="@dimen/_21sdp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no_thanks"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/light_grey"
         android:textAllCaps="false"   android:text="@string/no_thankes"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_21sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>