<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_rounded_corner"
        android:padding="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawablePadding="@dimen/_8sdp"
            android:text="@string/gps"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:drawableStartCompat="@drawable/ic_gps_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"    android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"                 android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_12sdp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"               android:layout_gravity="center"
                android:layout_weight="1"
android:backgroundTint="@color/white"
                app:strokeColor="@color/light_grey"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_12sdp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_ok" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>