<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top"
        android:gravity="center"
      >


        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/withdraw"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/grey_dark1"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt2" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_light_blue"
            android:drawablePadding="@dimen/_5sdp"
            android:inputType="numberDecimal"           android:hint="@string/amount"
            android:minHeight="@dimen/_40sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/light_grey1"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/bank_name"
            android:textColor="@color/grey_dark1"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_amount" />

        <EditText
            android:id="@+id/et_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_light_blue"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/bank_name"
            android:minHeight="@dimen/_40sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/light_grey1"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tv3" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/acc_number"
            android:textColor="@color/grey_dark1"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_bank" />

        <EditText
            android:id="@+id/et_acc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_light_blue"
            android:inputType="number" android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/acc_number"
            android:minHeight="@dimen/_40sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/light_grey1"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tv4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_withdraw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/withdraw_money"
       android:textAllCaps="false"     android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_21sdp"
            app:layout_constraintTop_toBottomOf="@id/et_acc_number"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:paddingTop="@dimen/_15sdp"    app:indicatorColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>