<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.dotjoo.aghslilnidelivery.base.OnlyVerticalSwipeRefreshLayout
         android:id="@+id/swiperefresh_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            tools:context=".ui.fragment.order.OrderFragment">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/white"
                android:fillViewport="true"
                android:paddingBottom="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/header_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_42sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="@dimen/_18sdp"
                        app:cardElevation="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_gravity="center_vertical"
                            android:background="@color/white"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            app:layout_constraintTop_toTopOf="parent">


                            <TextView
                                android:id="@+id/title_new"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_blue"
                                android:gravity="center"
                                android:text="@string/new_"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_11sdp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/title_current"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="@dimen/_3sdp"
                                android:layout_weight="1"

                                android:gravity="center"
                                android:text="@string/current"
                                android:textColor="@color/blue"
                                android:textSize="@dimen/_9sdp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/title_finished"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="@dimen/_3sdp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/finshed"
                                android:textColor="@color/blue"
                                android:textSize="@dimen/_9sdp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_orders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_14sdp"
                        android:layout_marginVertical="@dimen/_15sdp"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/header_ll"
                        tools:itemCount="0"
                        tools:listitem="@layout/item_order" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/lyt_empty_state"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/header_ll">

                        <ImageView
                            android:id="@+id/img"
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_200sdp"
                            android:src="@drawable/no_orders"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/no_orders"         android:textColor="@color/black"
                            android:textSize="@dimen/_17sdp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/img" />

                        <TextView
                            android:id="@+id/tv_msg_no_laundries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/no_orders_before"
                            android:textAlignment="center"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_14sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_2" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.dotjoo.aghslilnidelivery.base.OnlyVerticalSwipeRefreshLayout>
</layout>